@@ -1,4 +1,4 @@
-/*	$NetBSD: test-pfkey.c,v 1.1.1.2 2005/02/23 14:54:40 manu Exp $	*/
+/*	$NetBSD: test-pfkey.c,v 1.2 2005/07/12 16:49:52 manu Exp $	*/
 
 /*	$KAME: test-pfkey.c,v 1.4 2000/06/07 00:29:14 itojun Exp $	*/
 
@@ -308,7 +308,11 @@ key_setsadbprop()
 	struct sadb_prop m_prop;
 	struct sadb_comb *m_comb;
 	u_char buf[256];
+#if defined(SADB_X_EALG_AESCBC) && defined(SADB_X_AALG_SHA2_256)
+	u_int len = sizeof(m_prop) + sizeof(m_comb) * 3;
+#else
 	u_int len = sizeof(m_prop) + sizeof(m_comb) * 2;
+#endif
 
 	/* make prop & comb */
 	m_prop.sadb_prop_len = PFKEY_UNIT64(len);
@@ -361,6 +365,36 @@ key_setsadbprop()
 			buf, sizeof(*m_comb) * 2);
 	m_len += len;
 
+ #if defined(SADB_X_EALG_AESCBC) && defined(SADB_X_AALG_SHA2_256)
+ 	/* the 3rd is ESP AES-CBC and AH HMAC-SHA256 */
+ 	m_comb = (struct sadb_comb *)(buf + sizeof(*m_comb));
+ 	m_comb->sadb_comb_auth = SADB_X_AALG_SHA2_256;
+ 	m_comb->sadb_comb_encrypt = SADB_X_EALG_AESCBC;
+ 	m_comb->sadb_comb_flags = 0;
+ 	m_comb->sadb_comb_auth_minbits = 8;
+ 	m_comb->sadb_comb_auth_maxbits = 96;
+ 	m_comb->sadb_comb_encrypt_minbits = 128;
+ 	m_comb->sadb_comb_encrypt_maxbits = 128;
+ 	m_comb->sadb_comb_reserved = 0;
+ 	m_comb->sadb_comb_soft_allocations = 0;
+ 	m_comb->sadb_comb_hard_allocations = 0;
+ 	m_comb->sadb_comb_soft_bytes = 0;
+ 	m_comb->sadb_comb_hard_bytes = 0;
+ 	m_comb->sadb_comb_soft_addtime = 0;
+ 	m_comb->sadb_comb_hard_addtime = 0;
+ 	m_comb->sadb_comb_soft_usetime = 0;
+ 	m_comb->sadb_comb_hard_usetime = 0;
+ 
+ 	key_setsadbextbuf(m_buf, m_len,
+ 			(caddr_t)&m_prop, sizeof(struct sadb_prop),
+ 			buf, sizeof(*m_comb) * 3);
+ 	m_len += len;
+#else
+	key_setsadbextbuf(m_buf, m_len,
+			(caddr_t)&m_prop, sizeof(struct sadb_prop),
+			buf, sizeof(*m_comb) * 2);
+ 	m_len += len;
+#endif
 	return;
 }
 
